<resources>
    <string name="app_name">LifeTaskHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Life Task Helper Application</string>
    <string name="nav_header_subtitle">Group 3 Project</string>

    <string name="nav_header_desc">Menu Options</string>

    <string name="action_settings">Settings</string>

    <string name="preformed_task">Preformed Task</string>

    <string name="menu_home">Life Tasks</string>
    <string name="menu_gallery">Contact us</string>
    <string name="menu_slideshow">About</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="disableMessage">Disabled</string>

    <string name="title">*Title:</string>
    <string name="titleInfo">Title:</string>
    <string name="titleBox">Title</string>

    <string name="date">Date:</string>
    <string name="newDate">Set a new Date:</string>
    <string name="dateBox">YYYY-MM-DD</string>

    <string name="timeBox">hh:mm</string>
    <string name="locationBox">123 Apple Wood St</string>

    <string name="dateSelector">Date Selector:</string>
    <string name="timeSelector">Time Selector</string>

    <string name="location">Location:</string>
    <string name="newLocation">Set a new Location:</string>

    <string name="enable_location_access">Enable Location access for this Task</string>
    <string name="verify_address">Verify Address</string>
    <string name="valid_address">Valid Address</string>

    <string name="description">Description:</string>
    <string name="descriptionBox">Description</string>

    <string name="preformedList">Action Preformed List:</string>
    <string name="preformedListNotes">Selected Action Description:</string>
    <string name="preformedListLocation">Selected Action Address:</string>

    <string name="developed">Developed by:\n\nBrandon Heck,\n Jessica Wazbinski,
        \n Michelle Nater </string>
    <string name="school">School: Seminole State College</string>
    <string name="version">Version 0.0.1</string>

    <string name="contactUs">If there is anything that can improve the application,
        please enter it below and it will be sent to the Dev Team.</string>
    <string name="message">Enter Message Below: </string>
    <string name="messageBox">Message to Team</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="send">Send</string>

    <string name="record_today_date">**This Action will Record today\'s Date and Time, and Description**</string>
    <string name="record_all_data">**This Action will record your current Location, Date and Time, and Description**</string>

</resources>