<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.NewTaskActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtxtTitle"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/titleBox"
        android:hint="@string/titleBox"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/edtxtDate"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/dateBox"
        android:hint="@string/dateBox"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonDate"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:contentDescription="@string/dateSelector"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/calendar"
        app:layout_constraintBottom_toBottomOf="@+id/edtxtDate"
        app:layout_constraintEnd_toStartOf="@+id/edtxtTime"
        app:layout_constraintStart_toEndOf="@+id/edtxtDate"
        app:layout_constraintTop_toTopOf="@+id/edtxtDate"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edtxtTime"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:autofillHints="@string/timeBox"
        android:hint="@string/timeBox"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/edtxtDate"
        app:layout_constraintStart_toEndOf="@+id/edtxtDate"
        app:layout_constraintTop_toTopOf="@+id/edtxtDate"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonTime"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:contentDescription="@string/timeSelector"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/time"
        app:layout_constraintBottom_toBottomOf="@+id/edtxtTime"
        app:layout_constraintStart_toEndOf="@+id/edtxtTime"
        app:layout_constraintTop_toTopOf="@+id/edtxtTime"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <EditText
        android:id="@+id/edtxtLocation"
        android:layout_width="283dp"
        android:layout_height="52dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/locationBox"
        android:hint="@string/disableMessage"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textViewLocation"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonVerifyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/verify"
        android:text="@string/verify_address"
        app:layout_constraintStart_toStartOf="@+id/edtxtLocation"
        app:layout_constraintTop_toBottomOf="@+id/edtxtLocation" />

    <CheckBox
        android:id="@+id/checkBoxAddressCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/valid_address"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVerifyAddress"
        app:layout_constraintStart_toEndOf="@+id/buttonVerifyAddress"
        app:layout_constraintTop_toTopOf="@+id/buttonVerifyAddress" />

    <CheckBox
        android:id="@+id/checkBoxEnableLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/enable_location_access"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerifyAddress" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/save_green"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>